<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddQuestionActivity">

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etOdgovor"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnDodajOdgovor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/answers"
        android:textColor="@color/colorPrimary1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNaziv" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="397dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etOdgovor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <ListView
            android:id="@+id/lvOdgovori"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.521" />
    </FrameLayout>

    <Button
        android:id="@+id/btnDodajOdgovor"
        android:layout_width="233dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="8dp"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="@color/colorPrimary3"
        android:text="@string/add"
        android:textColor="@color/colorPrimary4"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/btnDodajTacan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDodajTacan"
        android:layout_width="232dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="12dp"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="@color/colorPrimary3"
        android:text="@string/add_correct_answer"
        android:textColor="@color/colorPrimary1"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/btnDodajPitanje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnDodajPitanje"
        android:layout_width="310dp"
        android:layout_height="82dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="@color/colorPrimary4"
        android:shape="rectangle"
        android:text="@string/save_question"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>